# chat-on-solana

./: .env  .gitignore  .mocharc.yaml  .prettierrc  Anchor.toml  README.md  ble  components.json  eslint.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
app/: README.md  index.html  vite.config.ts
app/solana-chat-frontend/: eslint.config.ts  package-lock.json  package.json  tsconfig.json  (+1 more)
programs/chat/: Cargo.toml
programs/chat/src/: errors.rs  lib.rs
programs/chat/src/context/: append_conversation_to_list.rs  create_conversation.rs  create_conversation_list.rs  delete_conversation.rs  mod.rs  remove_conversation_from_list.rs
programs/chat/src/context/invites/: accept_invite.rs  add_invite_to_someones_list.rs  create_invite_list.rs  mod.rs  reject_invite.rs
programs/chat/src/contexts/: accept_invite.rs  append_message.rs  create_chat.rs  delete_chat.rs  invite_another_user.rs  leave_chat.rs  register_user.rs  reject_invite.rs
programs/chat/src/instructions/: accept_invite.rs  append_conversation_to_list.rs  append_message.rs  create_chat.rs  create_conversation.rs  create_conversation_list.rs  create_conversation_list_account.rs  delete_chat.rs  invite_another_user.rs  leave_chat.rs  mod.rs  register_user.rs  reject_invite.rs
programs/chat/src/state/: conversation_account.rs  conversation_list_account.rs  mod.rs
programs/chat/src/states/: chat_account.rs  chat_list_account.rs  mod.rs
scripts/: DeletePdaAccounts.ts
tests/: .env  CreateConversation.ts  package-lock.json  package.json  tsconfig.json
(+77 files in other folders)
