[package]
name = "chat"
version = "0.1.0"
description = "Chat On Solana - decentralized instant messaging application"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chat"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
solana-program-entrypoint = "2.2.1"
